# vt-linalg

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md  library.json  main.cpp  mm_ijk.cpp  test_kalman.cpp  test_md.cpp  test_static.cpp  vnet_linalg  vt_linalg
docs/: README_8md.html  annotated.html  annotated_dup.js  circular__buffer_8h.html  circular__buffer_8h.js  circular__buffer_8h_source.html  classM___01_5.html  classN___01_5.html  classes.html  classvt_1_1circular__buffer__dynamic__t-members.html  classvt_1_1circular__buffer__dynamic__t.html  classvt_1_1circular__buffer__static__t-members.html  classvt_1_1circular__buffer__static__t.html  classvt_1_1circular__buffer__static__t.js  classvt_1_1complex__t-members.html  classvt_1_1complex__t.html  classvt_1_1complex__t.js  classvt_1_1extended__kalman__filter__t-members.html  classvt_1_1extended__kalman__filter__t.html  classvt_1_1extended__kalman__filter__t.js  classvt_1_1impl_1_1numeric__matrix__static__lu__t-members.html  classvt_1_1impl_1_1numeric__matrix__static__lu__t.html  classvt_1_1impl_1_1numeric__matrix__static__lu__t.js  classvt_1_1impl_1_1numeric__matrix__static__t-members.html  classvt_1_1impl_1_1numeric__matrix__static__t.html  classvt_1_1impl_1_1numeric__matrix__static__t.js  classvt_1_1impl_1_1numeric__vector__static__t-members.html  classvt_1_1impl_1_1numeric__vector__static__t.html  classvt_1_1impl_1_1numeric__vector__static__t.js  classvt_1_1impl_1_1numeric__vector__static__t_3_01T_00_01Col_01_4.html  classvt_1_1initializer__list-members.html  classvt_1_1initializer__list.html  classvt_1_1initializer__list.js  classvt_1_1iterator-members.html  classvt_1_1iterator.html  classvt_1_1iterator.js  classvt_1_1numeric__matrix__dynamic__lu__t-members.html  classvt_1_1numeric__matrix__dynamic__lu__t.html  classvt_1_1numeric__matrix__dynamic__t-members.html  classvt_1_1numeric__matrix__dynamic__t.html  (+191 more)
include/: circular_buffer.h  complex_number.h  dynamic_numeric_matrix.h  dynamic_numeric_vector.h  imu_tools.h  pair.h  (+12 more)
(+377 files in other folders)
